[fix]: height overflow

--- a/client/styles/layout/_body.scss
+++ b/client/styles/layout/_body.scss
@@ -6,11 +6,16 @@ body{
   height: 100vh;
 }
 
+.scrollY{
+  overflow-y: scroll;
+}
+
 div#searchBar{
   display: flex;
   flex-direction: row;
   // border: 1px solid $red;
   align-items: center;
+  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.09);
   i{
     font-size: 200%;
   }
